--- a/index.html
+++ b/index.html
@@ -21,6 +21,28 @@
       </a>
     </div>
   </div>
+  <section class="relative flex flex-col w-full aspect-video bg-amber-900">
+    <!-- slider -->
+    <div class="main-slider absolute top-[40px] left-[40px] flex flex-row w-[680px] h-[270px] p-[40px] z-100">
+      <p class="text-white uppercase text-[28px] leading-[30px]">В Новой Москве и МО на ключевых логистических маршрутах</p>
+      <!-- counter and slider buttons -->
+      <div class="flex flex-row items-center h-fit gap-[5px]">
+        <p class="text-[13px] text-[#9CA8AE] text-nowrap"><span class="text-white">1</span> / 3</p>
+        <div class="flex items-center justify-center w-[40px] h-[40px] rounded-full border-[1px] border-[#fff] cursor-pointer">
+          <img class="w-[40px] h-[40px]" src="" alt="">
+        </div>
+        <div class="flex items-center justify-center w-[40px] h-[40px] rounded-full border-[1px] border-[#fff] cursor-pointer">
+          <img class="w-[40px] h-[40px]" src="" alt="">
+        </div>
+      </div>
+    </div>
+    <div class="relative w-full h-full">
+      <!-- circle through opacity -->
+      <img class="absolute w-full h-full opacity-100 transition-all duration-200 ease-in" src="https://i.pinimg.com/1200x/b4/9d/b4/b49db4173ac1e3c76c925cb89ced058b.jpg" alt="">
+      <img class="absolute w-full h-full opacity-0 transition-all duration-200 ease-in" src="https://i.pinimg.com/736x/aa/51/d2/aa51d2e61e871c16cddfd10cce99e8b8.jpg" alt="">
+      <img class="absolute w-full h-full opacity-0 transition-all duration-200 ease-in" src="https://i.pinimg.com/1200x/6c/fd/04/6cfd04fdd0be40627a54a05a91a1ad83.jpg" alt="">
+    </div>
+  </section>
   <!-- halves -->
   <section class="flex flex-row max-md:flex-col w-full h-fit max-md:px-[30px] border-b-[1px] border-[#18181815]">
     <div class="flex flex-col gap-[60px] w-1/2 max-md:w-full p-[40px] max-md:px-[0] max-md:p-[30px]">
@@ -63,6 +85,7 @@
     <div class="relative flex flex-col gap-[40px] w-1/2 max-md:w-full p-[40px] max-md:p-[30px] bg-black">
       <div class="flex flex-row justify-between">
         <p class="text-[13px] text-white uppercase">Особенности Flex Box</p>
+        <!-- counter -->
         <p class="text-[13px] text-[#9CA8AE]"><span class="text-white">1</span> / 3</p>
       </div>
       <h2 class="text-[28px] text-white uppercase">Вырианты деления блоков</h2>
@@ -78,15 +101,15 @@
     </div>
     <div class="flex w-1/2 max-md:w-full aspect-square relative">
       <div class="absolute top-0 left-0 w-full min-w-fit h-full flex flex-row">
-        <img class="h-[720px] w-[720px] max-md:h-[360px] max-md:w-[360px] bg-zinc-900" src="" alt="">
-        <img class="h-[720px] w-[720px] max-md:h-[360px] max-md:w-[360px] bg-zinc-800" src="" alt="">
-        <img class="h-[720px] w-[720px] max-md:h-[360px] max-md:w-[360px] bg-zinc-700" src="" alt="">
+        <img class="h-[720px] w-[720px] min-w-[720px] min-h-[720px] max-md:h-[360px] max-md:w-[360px] max-md:min-w-[360px] max-md:min-h-[360px] bg-zinc-900" src="https://i.pinimg.com/736x/b5/f7/62/b5f762e6e1532a6bf9e0db22bb1896fd.jpg" alt="">
+        <img class="h-[720px] w-[720px] min-w-[720px] min-h-[720px] max-md:h-[360px] max-md:w-[360px] max-md:min-w-[360px] max-md:min-h-[360px] bg-zinc-800" src="https://i.pinimg.com/736x/9d/b1/59/9db15984898e2e189f5774d130706d4d.jpg" alt="">
+        <img class="h-[720px] w-[720px] min-w-[720px] min-h-[720px] max-md:h-[360px] max-md:w-[360px] max-md:min-w-[360px] max-md:min-h-[360px] bg-zinc-700" src="https://i.pinimg.com/736x/ca/d8/13/cad8138e2ff013b97efd3304dc378159.jpg" alt="">
       </div>
     </div>
   </section>
   <!-- full image -->
   <section class="w-full aspect-video bg-amber-900">
-    <img class="w-full h-full" src="" alt="">
+    <img class="w-full h-full" src="https://i.pinimg.com/736x/d1/03/ac/d103ac5e1af1ec57b6a23d65a1d643e7.jpg" alt="">
   </section>
   <!-- halves -->
   <section class="flex flex-row max-md:flex-col max-md:px-[30px] w-full h-fit border-b-[1px] border-[#18181815]">
@@ -141,7 +164,7 @@
     </div>
     <div class="relative w-full h-[580px] overflow-x-hidden">
       <div class="absolute h-[580px] left-0 top-0 min-w-fit w-fit max-w-fit flex flex-row gap-[2px]">
-        <div class="project group flex flex-col justify-end w-[440px] h-[580px] bg-amber-900">
+        <div class="feature first group flex flex-col justify-end w-[440px] h-[580px] bg-amber-900">
           <div class="relative gap-2 flex flex-col p-[40px] -translate-y-[-100px] group-hover:-translate-y-[0px] transition-tranform duration-500 ease-(--parametr-ease)">
             <div class="flex flex-row justify-between text-white">
               <p>Вариативность планировок</p>
@@ -156,7 +179,7 @@
               </p>
           </div>
         </div>
-        <div class="project group flex flex-col justify-end w-[440px] h-[580px] bg-amber-900">
+        <div class="feature second group flex flex-col justify-end w-[440px] h-[580px] bg-amber-900">
           <div class="relative gap-2 flex flex-col p-[40px] -translate-y-[-100px] group-hover:-translate-y-[0px] transition-tranform duration-500 ease-(--parametr-ease)">
             <div class="flex flex-row justify-between text-white">
               <p>Увеличенная рабочая высота</p>
@@ -171,7 +194,7 @@
               </p>
           </div>
         </div>
-        <div class="project group flex flex-col justify-end w-[440px] h-[580px] bg-amber-900">
+        <div class="feature third group flex flex-col justify-end w-[440px] h-[580px] bg-amber-900">
           <div class="relative gap-2 flex flex-col p-[40px] -translate-y-[-100px] group-hover:-translate-y-[0px] transition-tranform duration-500 ease-(--parametr-ease)">
             <div class="flex flex-row justify-between text-white">
               <p>Доки</p>
@@ -186,7 +209,7 @@
               </p>
           </div>
         </div>
-        <div class="project group flex flex-col justify-end w-[440px] h-[580px] bg-amber-900">
+        <div class="feature fourth group flex flex-col justify-end w-[440px] h-[580px] bg-amber-900">
           <div class="relative gap-2 flex flex-col p-[40px] -translate-y-[-100px] group-hover:-translate-y-[0px] transition-tranform duration-500 ease-(--parametr-ease)">
             <div class="flex flex-row justify-between text-white">
               <p>Современная архитектура</p>
@@ -201,7 +224,7 @@
               </p>
           </div>
         </div>
-        <div class="project group flex flex-col justify-end w-[440px] h-[580px] bg-amber-900">
+        <div class="feature fifth group flex flex-col justify-end w-[440px] h-[580px] bg-amber-900">
           <div class="relative gap-2 flex flex-col p-[40px] -translate-y-[-100px] group-hover:-translate-y-[0px] transition-tranform duration-500 ease-(--parametr-ease)">
             <div class="flex flex-row justify-between text-white">
               <p>Освещение</p>
@@ -216,7 +239,7 @@
               </p>
           </div>
         </div>
-        <div class="project group flex flex-col justify-end w-[440px] h-[580px] bg-amber-900">
+        <div class="feature sixth group flex flex-col justify-end w-[440px] h-[580px] bg-amber-900">
           <div class="relative gap-2 flex flex-col p-[40px] -translate-y-[-100px] group-hover:-translate-y-[0px] transition-tranform duration-500 ease-(--parametr-ease)">
             <div class="flex flex-row justify-between text-white">
               <p>Кроссдокинг</p>
