--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+  <div id="scale-wrapper">
+    <div id="scale-container">
+      <div id="scale-content">
   <div class="flex flex-col gap-[80px] p-[40px] max-md:px-[30px]">
     <h1 class="title">FLEX BOX — склад класса А с гибким делением блоков от 4 500 м²</h1>
     <div class="flex flex-row gap-[20px] justify-between max-md:flex-col max-md:gap-[60px]">
@@ -349,6 +352,9 @@
       </div>
     </div>
   </section>
+      </div>
+    </div>
+  </div>
   <script type="module" src="/src/main.js"></script>
 </body>
 
