--- a/index.html
+++ b/index.html
@@ -24,26 +24,26 @@
       </a>
     </div>
   </div>
-  <section class="relative flex flex-col w-full aspect-video bg-amber-900">
+  <section class="relative flex flex-col w-full aspect-video bg-amber-900" data-slider data-mode="fade">
     <!-- slider -->
     <div class="main-slider absolute top-[40px] left-[40px] flex flex-row w-[680px] h-[270px] p-[40px] z-100">
       <p class="text-white uppercase text-[28px] leading-[30px]">В Новой Москве и МО на ключевых логистических маршрутах</p>
       <!-- counter and slider buttons -->
-      <div class="flex flex-row items-center h-fit gap-[5px]">
-        <p class="text-[13px] text-[#9CA8AE] text-nowrap"><span class="text-white">1</span> / 3</p>
-        <div class="flex items-center justify-center w-[40px] h-[40px] rounded-full border-[1px] border-[#fff] cursor-pointer">
+      <div class="flex flex-row items-center h-fit gap-[5px]" data-slider-controls>
+        <p class="text-[13px] text-[#9CA8AE] text-nowrap" data-counter><span class="text-white" data-current>1</span> / <span data-total>3</span></p>
+        <div class="flex items-center justify-center w-[40px] h-[40px] rounded-full border-[1px] border-[#fff] cursor-pointer" data-prev>
           <img class="w-[40px] h-[40px]" src="" alt="">
         </div>
-        <div class="flex items-center justify-center w-[40px] h-[40px] rounded-full border-[1px] border-[#fff] cursor-pointer">
+        <div class="flex items-center justify-center w-[40px] h-[40px] rounded-full border-[1px] border-[#fff] cursor-pointer" data-next>
           <img class="w-[40px] h-[40px]" src="" alt="">
         </div>
       </div>
     </div>
-    <div class="relative w-full h-full">
+    <div class="relative w-full h-full" data-track>
       <!-- circle through opacity -->
-      <img class="absolute w-full h-full opacity-100 transition-all duration-200 ease-in" src="https://i.pinimg.com/1200x/b4/9d/b4/b49db4173ac1e3c76c925cb89ced058b.jpg" alt="">
-      <img class="absolute w-full h-full opacity-0 transition-all duration-200 ease-in" src="https://i.pinimg.com/736x/aa/51/d2/aa51d2e61e871c16cddfd10cce99e8b8.jpg" alt="">
-      <img class="absolute w-full h-full opacity-0 transition-all duration-200 ease-in" src="https://i.pinimg.com/1200x/6c/fd/04/6cfd04fdd0be40627a54a05a91a1ad83.jpg" alt="">
+      <img class="absolute w-full h-full opacity-100 transition-all duration-200 ease-in" data-slide src="https://i.pinimg.com/1200x/b4/9d/b4/b49db4173ac1e3c76c925cb89ced058b.jpg" alt="">
+      <img class="absolute w-full h-full opacity-0 transition-all duration-200 ease-in" data-slide src="https://i.pinimg.com/736x/aa/51/d2/aa51d2e61e871c16cddfd10cce99e8b8.jpg" alt="">
+      <img class="absolute w-full h-full opacity-0 transition-all duration-200 ease-in" data-slide src="https://i.pinimg.com/1200x/6c/fd/04/6cfd04fdd0be40627a54a05a91a1ad83.jpg" alt="">
     </div>
   </section>
   <!-- halves -->
@@ -84,29 +84,29 @@
     </div>
   </section>
   <!-- halves with slider -->
-  <section class="flex flex-row max-md:flex-col-reverse w-full h-fit overflow-x-hidden">
+  <section class="flex flex-row max-md:flex-col-reverse w-full h-fit overflow-x-hidden" data-slider data-mode="translate" data-infinite="true">
     <div class="relative flex flex-col gap-[40px] w-1/2 max-md:w-full p-[40px] max-md:p-[30px] bg-black">
       <div class="flex flex-row justify-between">
         <p class="text-[13px] text-white uppercase">Особенности Flex Box</p>
         <!-- counter -->
-        <p class="text-[13px] text-[#9CA8AE]"><span class="text-white">1</span> / 3</p>
+        <p class="text-[13px] text-[#9CA8AE]" data-counter><span class="text-white" data-current>1</span> / <span data-total>3</span></p>
       </div>
       <h2 class="text-[28px] text-white uppercase">Вырианты деления блоков</h2>
       <div class="flex flex-row gap-[5px]">
-        <div class="flex items-center justify-center w-[40px] h-[40px] rounded-full border-[1px] border-[#fff] cursor-pointer">
+        <div class="flex items-center justify-center w-[40px] h-[40px] rounded-full border-[1px] border-[#fff] cursor-pointer" data-prev>
           <img class="w-[40px] h-[40px]" src="" alt="">
         </div>
-        <div class="flex items-center justify-center w-[40px] h-[40px] rounded-full border-[1px] border-[#fff] cursor-pointer">
+        <div class="flex items-center justify-center w-[40px] h-[40px] rounded-full border-[1px] border-[#fff] cursor-pointer" data-next>
           <img class="w-[40px] h-[40px]" src="" alt="">
         </div>
       </div>
       <p class="text-[36px] text-white w-[360px] leading-[40px]">Гибкое деление блоков от 4,5 тыс. м² до 20 тыс. м²</p>
     </div>
-    <div class="flex w-1/2 max-md:w-full aspect-square relative">
-      <div class="absolute top-0 left-0 w-full min-w-fit h-full flex flex-row">
-        <img class="h-[720px] w-[720px] min-w-[720px] min-h-[720px] max-md:h-[360px] max-md:w-[360px] max-md:min-w-[360px] max-md:min-h-[360px] bg-zinc-900" src="https://i.pinimg.com/736x/b5/f7/62/b5f762e6e1532a6bf9e0db22bb1896fd.jpg" alt="">
-        <img class="h-[720px] w-[720px] min-w-[720px] min-h-[720px] max-md:h-[360px] max-md:w-[360px] max-md:min-w-[360px] max-md:min-h-[360px] bg-zinc-800" src="https://i.pinimg.com/736x/9d/b1/59/9db15984898e2e189f5774d130706d4d.jpg" alt="">
-        <img class="h-[720px] w-[720px] min-w-[720px] min-h-[720px] max-md:h-[360px] max-md:w-[360px] max-md:min-w-[360px] max-md:min-h-[360px] bg-zinc-700" src="https://i.pinimg.com/736x/ca/d8/13/cad8138e2ff013b97efd3304dc378159.jpg" alt="">
+    <div class="flex w-1/2 max-md:w-full aspect-square relative overflow-hidden">
+      <div class="absolute top-0 left-0 w-full min-w-fit h-full flex flex-row" data-track>
+        <img class="h-[720px] w-[720px] min-w-[720px] min-h-[720px] max-md:h-[360px] max-md:w-[360px] max-md:min-w-[360px] max-md:min-h-[360px] bg-zinc-900" data-slide src="https://i.pinimg.com/736x/b5/f7/62/b5f762e6e1532a6bf9e0db22bb1896fd.jpg" alt="">
+        <img class="h-[720px] w-[720px] min-w-[720px] min-h-[720px] max-md:h-[360px] max-md:w-[360px] max-md:min-w-[360px] max-md:min-h-[360px] bg-zinc-800" data-slide src="https://i.pinimg.com/736x/9d/b1/59/9db15984898e2e189f5774d130706d4d.jpg" alt="">
+        <img class="h-[720px] w-[720px] min-w-[720px] min-h-[720px] max-md:h-[360px] max-md:w-[360px] max-md:min-w-[360px] max-md:min-h-[360px] bg-zinc-700" data-slide src="https://i.pinimg.com/736x/ca/d8/13/cad8138e2ff013b97efd3304dc378159.jpg" alt="">
       </div>
     </div>
   </section>
@@ -151,23 +151,23 @@
       </div>
     </div>
   </section>
-  <section class="flex flex-col w-full h-fit">
+  <section class="flex flex-col w-full h-fit" data-slider data-mode="translate" data-infinite="true">
     <div class="flex flex-row w-full p-[40px] max-md:p-[30px] items-center max-md:flex-col justify-between max-md:items-start">
       <div class="flex flex-row gap-[40px] items-center">
         <h2 class="title">Наши преимущества</h2>
       </div>
       <div class="flex flex-row gap-[5px]">
-        <div class="flex items-center justify-center w-[40px] h-[40px] rounded-full border-[1px] border-[#181818] cursor-pointer">
+        <div class="flex items-center justify-center w-[40px] h-[40px] rounded-full border-[1px] border-[#181818] cursor-pointer" data-prev>
           <img class="w-[40px] h-[40px]" src="" alt="">
         </div>
-        <div class="flex items-center justify-center w-[40px] h-[40px] rounded-full border-[1px] border-[#181818] cursor-pointer">
+        <div class="flex items-center justify-center w-[40px] h-[40px] rounded-full border-[1px] border-[#181818] cursor-pointer" data-next>
           <img class="w-[40px] h-[40px]" src="" alt="">
         </div>
       </div>
     </div>
     <div class="relative w-full h-[580px] overflow-x-hidden">
-      <div class="absolute h-[580px] left-0 top-0 min-w-fit w-fit max-w-fit flex flex-row gap-[2px]">
-        <div class="feature first group flex flex-col justify-end w-[440px] h-[580px] bg-amber-900">
+      <div class="absolute h-[580px] left-0 top-0 min-w-fit w-fit max-w-fit flex flex-row gap-[2px]" data-track>
+        <div class="feature first group flex flex-col justify-end w-[440px] h-[580px] bg-amber-900" data-slide>
           <div class="relative gap-2 flex flex-col p-[40px] -translate-y-[-100px] group-hover:-translate-y-[0px] transition-tranform duration-500 ease-(--parametr-ease)">
             <div class="flex flex-row justify-between text-white">
               <p>Вариативность планировок</p>
@@ -182,7 +182,7 @@
               </p>
           </div>
         </div>
-        <div class="feature second group flex flex-col justify-end w-[440px] h-[580px] bg-amber-900">
+        <div class="feature second group flex flex-col justify-end w-[440px] h-[580px] bg-amber-900" data-slide>
           <div class="relative gap-2 flex flex-col p-[40px] -translate-y-[-100px] group-hover:-translate-y-[0px] transition-tranform duration-500 ease-(--parametr-ease)">
             <div class="flex flex-row justify-between text-white">
               <p>Увеличенная рабочая высота</p>
@@ -197,7 +197,7 @@
               </p>
           </div>
         </div>
-        <div class="feature third group flex flex-col justify-end w-[440px] h-[580px] bg-amber-900">
+        <div class="feature third group flex flex-col justify-end w-[440px] h-[580px] bg-amber-900" data-slide>
           <div class="relative gap-2 flex flex-col p-[40px] -translate-y-[-100px] group-hover:-translate-y-[0px] transition-tranform duration-500 ease-(--parametr-ease)">
             <div class="flex flex-row justify-between text-white">
               <p>Доки</p>
@@ -212,7 +212,7 @@
               </p>
           </div>
         </div>
-        <div class="feature fourth group flex flex-col justify-end w-[440px] h-[580px] bg-amber-900">
+        <div class="feature fourth group flex flex-col justify-end w-[440px] h-[580px] bg-amber-900" data-slide>
           <div class="relative gap-2 flex flex-col p-[40px] -translate-y-[-100px] group-hover:-translate-y-[0px] transition-tranform duration-500 ease-(--parametr-ease)">
             <div class="flex flex-row justify-between text-white">
               <p>Современная архитектура</p>
@@ -227,7 +227,7 @@
               </p>
           </div>
         </div>
-        <div class="feature fifth group flex flex-col justify-end w-[440px] h-[580px] bg-amber-900">
+        <div class="feature fifth group flex flex-col justify-end w-[440px] h-[580px] bg-amber-900" data-slide>
           <div class="relative gap-2 flex flex-col p-[40px] -translate-y-[-100px] group-hover:-translate-y-[0px] transition-tranform duration-500 ease-(--parametr-ease)">
             <div class="flex flex-row justify-between text-white">
               <p>Освещение</p>
@@ -242,7 +242,7 @@
               </p>
           </div>
         </div>
-        <div class="feature sixth group flex flex-col justify-end w-[440px] h-[580px] bg-amber-900">
+        <div class="feature sixth group flex flex-col justify-end w-[440px] h-[580px] bg-amber-900" data-slide>
           <div class="relative gap-2 flex flex-col p-[40px] -translate-y-[-100px] group-hover:-translate-y-[0px] transition-tranform duration-500 ease-(--parametr-ease)">
             <div class="flex flex-row justify-between text-white">
               <p>Кроссдокинг</p>
@@ -283,7 +283,7 @@
       </div>
     </div>
   </section>
-  <section class="flex flex-col w-full h-fit">
+  <section class="flex flex-col w-full h-fit" data-slider data-mode="translate" data-infinite="true">
     <div class="flex flex-row w-full p-[40px] max-md:p-[30px] items-center max-md:items-start justify-between">
       <div class="flex flex-row max-md:flex-col max-md:gap-[20px] gap-[40px] items-center">
         <h2 class="title">Наши проекты</h2>
@@ -296,17 +296,17 @@
         </a>
       </div>
       <div class="flex flex-row gap-[5px]">
-        <div class="flex items-center justify-center w-[40px] h-[40px] rounded-full border-[1px] border-[#181818] cursor-pointer">
+        <div class="flex items-center justify-center w-[40px] h-[40px] rounded-full border-[1px] border-[#181818] cursor-pointer" data-prev>
           <img class="w-[40px] h-[40px]" src="" alt="">
         </div>
-        <div class="flex items-center justify-center w-[40px] h-[40px] rounded-full border-[1px] border-[#181818] cursor-pointer">
+        <div class="flex items-center justify-center w-[40px] h-[40px] rounded-full border-[1px] border-[#181818] cursor-pointer" data-next>
           <img class="w-[40px] h-[40px]" src="" alt="">
         </div>
       </div>
     </div>
     <div class="relative w-full h-[580px] max-md:h-[380px] overflow-x-hidden">
-      <div class="absolute h-[580px] max-md:h-[380px] left-0 top-0 min-w-fit w-fit max-w-fit flex flex-row gap-[2px]">
-        <a href="#" target="_blank" class="project senkino max-w-[calc(50vw-1px)] w-[calc(50vw-1px)] max-md:min-w-[330px] max-md:max-w-[330px] max-md:w-[330px] h-full max-md:h-[380px] bg-amber-300">
+      <div class="absolute h-[580px] max-md:h-[380px] left-0 top-0 min-w-fit w-fit max-w-fit flex flex-row gap-[2px]" data-track>
+        <a href="#" target="_blank" class="project senkino max-w-[719px] w-[719px] max-md:min-w-[330px] max-md:max-w-[330px] max-md:w-[330px] h-full max-md:h-[380px] bg-amber-300" data-slide>
           <div class="flex items-center gap-2 w-full h-[100px] bg-black px-[40px]">
             <div class="project_color rounded-full h-[30px] w-[30px]">
               <img class="h-[30px] w-[30px]" src="" alt="">
@@ -314,7 +314,7 @@
             <p class="text uppercase">Сенкино</p>
           </div>
         </a>
-        <a href="#" target="_blank" class="project balashiha max-w-[calc(50vw-1px)] w-[calc(50vw-1px)] max-md:min-w-[330px] max-md:max-w-[330px] max-md:w-[330px] h-full max-md:h-[380px] bg-amber-300">
+        <a href="#" target="_blank" class="project balashiha max-w-[719px] w-[719px] max-md:min-w-[330px] max-md:max-w-[330px] max-md:w-[330px] h-full max-md:h-[380px] bg-amber-300" data-slide>
           <div class="flex items-center gap-2 w-full h-[100px] bg-black px-[40px]">
             <div class="project_color rounded-full h-[30px] w-[30px]">
               <img class="h-[30px] w-[30px]" src="" alt="">
@@ -322,7 +322,7 @@
             <p class="text uppercase">Балашиха</p>
           </div>
         </a>
-        <a href="#" target="_blank" class="project kuvekino max-w-[calc(50vw-1px)] w-[calc(50vw-1px)] max-md:min-w-[330px] max-md:max-w-[330px] max-md:w-[330px] h-full max-md:h-[380px] bg-amber-300">
+        <a href="#" target="_blank" class="project kuvekino max-w-[719px] w-[719px] max-md:min-w-[330px] max-md:max-w-[330px] max-md:w-[330px] h-full max-md:h-[380px] bg-amber-300" data-slide>
           <div class="flex items-center gap-2 w-full h-[100px] bg-black px-[40px]">
             <div class="project_color rounded-full h-[30px] w-[30px]">
               <img class="h-[30px] w-[30px]" src="" alt="">
